[metadata]
name = rs_fsl
description = Python interface for the Rohde-Schwarz FSL Spectrum Analyzer
url = https://github.com/bleykauf/rs_fsl
author = Bastian Leykauf
author_email = leykauf@physik.hu-berlin.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.4
setup_requires =
    setuptools >= 38.3.0
install_requires = 
    numpy
    pandas
    pyvisa
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = rs_fsl/_version.py
versionfile_build = rs_fsl/_version.py
tag_prefix =
parentdir_prefix = rs_fsl-

[flake8]
docstring-convention = numpy
per-file-ignores =
    tests/*: D103, D100
exclude = rs_fsl/_version.py
max-line-length = 88
extend-ignore = E203